# velocity-framework

./: .gitignore  Cargo.toml  GETTING_STARTED.md  MIGRATING_FROM_REACT.md  REACT_COMPATIBILITY.md  README.md  index.html  install.sh  package.json  pnpm-lock.yaml
crates/velocity-bundler/: Cargo.toml
crates/velocity-bundler/src/: bundler.rs  dev_server.rs  lib.rs  module_graph.rs
crates/velocity-cli/: Cargo.toml
crates/velocity-cli/src/: create.rs  dev_server.rs  hmr_client.js  main.rs
crates/velocity-compiler/: Cargo.toml
crates/velocity-compiler/src/: analyzer.rs  codegen.rs  error.rs  lib.rs  optimizer.rs  parser.rs  transformer.rs
crates/velocity-wasm/: Cargo.toml
crates/velocity-wasm/crates/velocity-compiler/: Cargo.toml
crates/velocity-wasm/pkg/: index.js  package.json  react.js
crates/velocity-wasm/src/: lib.rs
docs/: CLI.md  COMPILER.md  HMR.md
examples/counter/: index.html  package.json
examples/counter/src/: benchmark.tsx  index.tsx
examples/doom-demo/: README.md  index.html
examples/doom-demo/public/: style.css
examples/doom-demo/src/: index.tsx
examples/landing/: index.html
examples/react-demo/: index.html
examples/react-demo/public/: style.css
examples/react-demo/src/: App.tsx
examples/todo-app/: FEATURES.md  README.md  benchmark.html  debug.html  index.html  package.json  shadcn.html  simple.html  tailwind.config.js  test.html  test2.html  test3.html  tsconfig.json  vite.config.ts
examples/todo-app/src/: app-shadcn.tsx  index.tsx  velocity-wasm-runtime.ts  velocity.d.ts
examples/todo-app/src/components/: ui.tsx
examples/todo-app/src/wasm/: package.json  velocity_wasm.d.ts  velocity_wasm.js  velocity_wasm_bg.wasm  velocity_wasm_bg.wasm.d.ts
