[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/velocity-framework"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web/Async
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# Build tooling - commented out for now due to version conflicts
# We'll use a simpler approach without SWC
# swc_core = { version = "0.102", features = ["ecma_parser", "ecma_transforms", "ecma_codegen", "ecma_visit"] }
# swc_ecma_parser = "0.148"
# swc_ecma_ast = "0.116"
# swc_common = "0.38"

# File watching
notify = "6.1"
walkdir = "2.4"

# CLI utilities
colored = "2.1"
