[package]
name = "velocity-bundler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
notify.workspace = true

# Additional dependencies
walkdir = "2.4"
sha2 = "0.10"
