[package]
name = "velocity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "velocity"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
velocity-compiler = { path = "../velocity-compiler" }
notify.workspace = true
walkdir.workspace = true
colored.workspace = true

# HTTP server and WebSocket support
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"

# Serialization for WebSocket messages
serde.workspace = true
serde_json.workspace = true

# Optional: Keep bundler for now (will be replaced later)
# velocity-bundler = { path = "../velocity-bundler" }
