[package]
name = "velocity-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlButtonElement",
    "DomTokenList",
] }
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
